FilterMapFunctions/FilterMapFunctionsParser.py
# Generated from FilterMapFunctions.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FilterMapFunctionsParser ( Parser ):

    grammarFileName = "FilterMapFunctions.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'map'", "'('", "','", "')'", "'filter'", 
                     "'lambda'", "':'", "'.upper()'", "'.lower()'", "'.capitalize()'", 
                     "' and '", "' or '", "'['", "']'", "'%'", "'**'", "'.'", 
                     "'()'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'*'", "'/'", "'+'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INT", "ID", "FLOAT", "STRING", "MUL", 
                      "DIV", "ADD", "SUB", "NEWLINE", "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_map = 2
    RULE_filter = 3
    RULE_lambdaExpr = 4
    RULE_function = 5
    RULE_op = 6
    RULE_iterable = 7
    RULE_list = 8
    RULE_tuple = 9
    RULE_elements = 10
    RULE_var = 11
    RULE_expr = 12

    ruleNames =  [ "prog", "stat", "map", "filter", "lambdaExpr", "function", 
                   "op", "iterable", "list", "tuple", "elements", "var", 
                   "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    INT=25
    ID=26
    FLOAT=27
    STRING=28
    MUL=29
    DIV=30
    ADD=31
    SUB=32
    NEWLINE=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FilterMapFunctionsParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FilterMapFunctionsParser.StatContext)
            else:
                return self.getTypedRuleContext(FilterMapFunctionsParser.StatContext,i)


        def getRuleIndex(self):
            return FilterMapFunctionsParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = FilterMapFunctionsParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.stat()
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8589934626) != 0)):
                    break

            self.state = 31
            self.match(FilterMapFunctionsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def map_(self):
            return self.getTypedRuleContext(FilterMapFunctionsParser.MapContext,0)


        def NEWLINE(self):
            return self.getToken(FilterMapFunctionsParser.NEWLINE, 0)

        def filter_(self):
            return self.getTypedRuleContext(FilterMapFunctionsParser.FilterContext,0)


        def getRuleIndex(self):
            return FilterMapFunctionsParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = FilterMapFunctionsParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.map_()
                self.state = 34
                self.match(FilterMapFunctionsParser.NEWLINE)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self.filter_()
                self.state = 37
                self.match(FilterMapFunctionsParser.NEWLINE)
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 3)
                self.state = 39
                self.match(FilterMapFunctionsParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MapContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lambdaExpr(self):
            return self.getTypedRuleContext(FilterMapFunctionsParser.LambdaExprContext,0)


        def iterable(self):
            return self.getTypedRuleContext(FilterMapFunctionsParser.IterableContext,0)


        def getRuleIndex(self):
            return FilterMapFunctionsParser.RULE_map

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMap" ):
                listener.enterMap(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMap" ):
                listener.exitMap(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMap" ):
                return visitor.visitMap(self)
            else:
                return visitor.visitChildren(self)




    def map_(self):

        localctx = FilterMapFunctionsParser.MapContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_map)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(FilterMapFunctionsParser.T__0)
            self.state = 43
            self.match(FilterMapFunctionsParser.T__1)
            self.state = 44
            self.lambdaExpr()
            self.state = 45
            self.match(FilterMapFunctionsParser.T__2)
            self.state = 46
            self.iterable()
            self.state = 47
            self.match(FilterMapFunctionsParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lambdaExpr(self):
            return self.getTypedRuleContext(FilterMapFunctionsParser.LambdaExprContext,0)


        def iterable(self):
            return self.getTypedRuleContext(FilterMapFunctionsParser.IterableContext,0)


        def getRuleIndex(self):
            return FilterMapFunctionsParser.RULE_filter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilter" ):
                listener.enterFilter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilter" ):
                listener.exitFilter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilter" ):
                return visitor.visitFilter(self)
            else:
                return visitor.visitChildren(self)




    def filter_(self):

        localctx = FilterMapFunctionsParser.FilterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_filter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(FilterMapFunctionsParser.T__4)
            self.state = 50
            self.match(FilterMapFunctionsParser.T__1)
            self.state = 51
            self.lambdaExpr()
            self.state = 52
            self.match(FilterMapFunctionsParser.T__2)
            self.state = 53
            self.iterable()
            self.state = 54
            self.match(FilterMapFunctionsParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LambdaExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FilterMapFunctionsParser.ID, 0)

        def function(self):
            return self.getTypedRuleContext(FilterMapFunctionsParser.FunctionContext,0)


        def getRuleIndex(self):
            return FilterMapFunctionsParser.RULE_lambdaExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLambdaExpr" ):
                listener.enterLambdaExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLambdaExpr" ):
                listener.exitLambdaExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambdaExpr" ):
                return visitor.visitLambdaExpr(self)
            else:
                return visitor.visitChildren(self)




    def lambdaExpr(self):

        localctx = FilterMapFunctionsParser.LambdaExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lambdaExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(FilterMapFunctionsParser.T__5)
            self.state = 57
            self.match(FilterMapFunctionsParser.ID)
            self.state = 58
            self.match(FilterMapFunctionsParser.T__6)
            self.state = 59
            self.function()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FilterMapFunctionsParser.ID, 0)

        def op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FilterMapFunctionsParser.OpContext)
            else:
                return self.getTypedRuleContext(FilterMapFunctionsParser.OpContext,i)


        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FilterMapFunctionsParser.VarContext)
            else:
                return self.getTypedRuleContext(FilterMapFunctionsParser.VarContext,i)


        def function(self):
            return self.getTypedRuleContext(FilterMapFunctionsParser.FunctionContext,0)


        def INT(self):
            return self.getToken(FilterMapFunctionsParser.INT, 0)

        def getRuleIndex(self):
            return FilterMapFunctionsParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = FilterMapFunctionsParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.match(FilterMapFunctionsParser.ID)
                self.state = 62
                self.op()
                self.state = 63
                self.var()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.match(FilterMapFunctionsParser.ID)
                self.state = 66
                self.match(FilterMapFunctionsParser.T__7)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.match(FilterMapFunctionsParser.ID)
                self.state = 68
                self.match(FilterMapFunctionsParser.T__8)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 69
                self.match(FilterMapFunctionsParser.ID)
                self.state = 70
                self.match(FilterMapFunctionsParser.T__9)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.match(FilterMapFunctionsParser.ID)
                self.state = 72
                self.op()
                self.state = 73
                self.var()
                self.state = 74
                self.op()
                self.state = 75
                self.var()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==11 or _la==12:
                    self.state = 76
                    _la = self._input.LA(1)
                    if not(_la==11 or _la==12):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 79
                    self.function()


                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 82
                self.match(FilterMapFunctionsParser.ID)
                self.state = 83
                self.match(FilterMapFunctionsParser.T__12)
                self.state = 84
                self.match(FilterMapFunctionsParser.INT)
                self.state = 85
                self.match(FilterMapFunctionsParser.T__13)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8086323200) != 0):
                    self.state = 86
                    self.op()
                    self.state = 87
                    self.var()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(FilterMapFunctionsParser.ADD, 0)

        def SUB(self):
            return self.getToken(FilterMapFunctionsParser.SUB, 0)

        def MUL(self):
            return self.getToken(FilterMapFunctionsParser.MUL, 0)

        def DIV(self):
            return self.getToken(FilterMapFunctionsParser.DIV, 0)

        def ID(self):
            return self.getToken(FilterMapFunctionsParser.ID, 0)

        def getRuleIndex(self):
            return FilterMapFunctionsParser.RULE_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp" ):
                listener.enterOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp" ):
                listener.exitOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp" ):
                return visitor.visitOp(self)
            else:
                return visitor.visitChildren(self)




    def op(self):

        localctx = FilterMapFunctionsParser.OpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_op)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.match(FilterMapFunctionsParser.ADD)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(FilterMapFunctionsParser.SUB)
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.match(FilterMapFunctionsParser.MUL)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 4)
                self.state = 96
                self.match(FilterMapFunctionsParser.DIV)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 5)
                self.state = 97
                self.match(FilterMapFunctionsParser.T__14)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 6)
                self.state = 98
                self.match(FilterMapFunctionsParser.T__15)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 7)
                self.state = 99
                self.match(FilterMapFunctionsParser.T__16)
                self.state = 100
                self.match(FilterMapFunctionsParser.ID)
                self.state = 101
                self.match(FilterMapFunctionsParser.T__17)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 8)
                self.state = 102
                self.match(FilterMapFunctionsParser.T__18)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 9)
                self.state = 103
                self.match(FilterMapFunctionsParser.T__19)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 10)
                self.state = 104
                self.match(FilterMapFunctionsParser.T__20)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 11)
                self.state = 105
                self.match(FilterMapFunctionsParser.T__21)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 12)
                self.state = 106
                self.match(FilterMapFunctionsParser.T__22)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 13)
                self.state = 107
                self.match(FilterMapFunctionsParser.T__23)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IterableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_(self):
            return self.getTypedRuleContext(FilterMapFunctionsParser.ListContext,0)


        def tuple_(self):
            return self.getTypedRuleContext(FilterMapFunctionsParser.TupleContext,0)


        def ID(self):
            return self.getToken(FilterMapFunctionsParser.ID, 0)

        def getRuleIndex(self):
            return FilterMapFunctionsParser.RULE_iterable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIterable" ):
                listener.enterIterable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIterable" ):
                listener.exitIterable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIterable" ):
                return visitor.visitIterable(self)
            else:
                return visitor.visitChildren(self)




    def iterable(self):

        localctx = FilterMapFunctionsParser.IterableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_iterable)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.list_()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.tuple_()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.match(FilterMapFunctionsParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elements(self):
            return self.getTypedRuleContext(FilterMapFunctionsParser.ElementsContext,0)


        def getRuleIndex(self):
            return FilterMapFunctionsParser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList" ):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)




    def list_(self):

        localctx = FilterMapFunctionsParser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(FilterMapFunctionsParser.T__12)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 436207616) != 0):
                self.state = 116
                self.elements()


            self.state = 119
            self.match(FilterMapFunctionsParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TupleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elements(self):
            return self.getTypedRuleContext(FilterMapFunctionsParser.ElementsContext,0)


        def getRuleIndex(self):
            return FilterMapFunctionsParser.RULE_tuple

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTuple" ):
                listener.enterTuple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTuple" ):
                listener.exitTuple(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTuple" ):
                return visitor.visitTuple(self)
            else:
                return visitor.visitChildren(self)




    def tuple_(self):

        localctx = FilterMapFunctionsParser.TupleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tuple)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(FilterMapFunctionsParser.T__1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 436207616) != 0):
                self.state = 122
                self.elements()


            self.state = 125
            self.match(FilterMapFunctionsParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FilterMapFunctionsParser.ExprContext)
            else:
                return self.getTypedRuleContext(FilterMapFunctionsParser.ExprContext,i)


        def getRuleIndex(self):
            return FilterMapFunctionsParser.RULE_elements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElements" ):
                listener.enterElements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElements" ):
                listener.exitElements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElements" ):
                return visitor.visitElements(self)
            else:
                return visitor.visitChildren(self)




    def elements(self):

        localctx = FilterMapFunctionsParser.ElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_elements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.expr()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 128
                self.match(FilterMapFunctionsParser.T__2)
                self.state = 129
                self.expr()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FilterMapFunctionsParser.ID, 0)

        def INT(self):
            return self.getToken(FilterMapFunctionsParser.INT, 0)

        def FLOAT(self):
            return self.getToken(FilterMapFunctionsParser.FLOAT, 0)

        def getRuleIndex(self):
            return FilterMapFunctionsParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = FilterMapFunctionsParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 234881024) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(FilterMapFunctionsParser.INT, 0)

        def FLOAT(self):
            return self.getToken(FilterMapFunctionsParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(FilterMapFunctionsParser.STRING, 0)

        def getRuleIndex(self):
            return FilterMapFunctionsParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = FilterMapFunctionsParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 436207616) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





